E2J/part4/t12.output
running e2j
compiling the Java generated code
My_e2j.java:3: error: illegal start of expression
=
^
My_e2j.java:4: error: illegal start of expression
=
^
My_e2j.java:5: error: unclosed string literal
System.out.println"
                  ^
My_e2j.java:7: error: unclosed string literal
"
^
4 errors
